Update branding from RetailSpark to UtilitySpark

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RetailSpark Blog - Marketing Challenges in Retail Electricity</title>
-    <meta name="description" content="Expert insights on marketing challenges in the retail electricity industry. Navigate deregulated markets, build customer trust, and develop winning strategies." />
-    <meta name="author" content="RetailSpark" />
+    <title>UtilitySpark Blog - Marketing Challenges in Energy Utilities</title>
+    <meta name="description" content="Expert insights on marketing challenges in the energy utility industry. Navigate deregulated markets, build customer trust, and develop winning strategies." />
+    <meta name="author" content="UtilitySpark" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-    <meta property="og:title" content="RetailSpark Blog - Marketing Intelligence for Energy" />
-    <meta property="og:description" content="Expert insights on marketing challenges in the retail electricity industry. Navigate deregulated markets, build customer trust, and develop winning strategies." />
+    <meta property="og:title" content="UtilitySpark Blog - Marketing Intelligence for Energy" />
+    <meta property="og:description" content="Expert insights on marketing challenges in the energy utility industry. Navigate deregulated markets, build customer trust, and develop winning strategies." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/images/hero-bg.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@RetailSpark" />
+    <meta name="twitter:site" content="@UtilitySpark" />
     <meta name="twitter:image" content="/images/hero-bg.svg" />
   </head>
 
